Added bootstrap framework

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-Hello!
+<html lang="en">
+    <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="//css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="//css/bootstrap-theme.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="//js/bootstrap.min.js" ></script>
+            </head>
+    <body>
+
+    </body>
+</html>
