--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <html lang="en">
     <head>
+
+
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="/css/bootstrap.min.css">
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 
+        <script src="/js/jquery-2.1.0.min.js"></script>
+
         <!-- Latest compiled and minified JavaScript -->
         <script src="/js/bootstrap.min.js" ></script>
-            </head>
+        </head>
     <body>
 
     </body>
