--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="/js/bootstrap.min.js" ></script>
+        <title>Air Adventure!!!</title>
         </head>
     <body>
+
     </body>
 </html>
