Added canvas js

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="/js/bootstrap.min.js" ></script>
+
+        <script src="/js/canvasjs.min.js"
         <title>Air Adventure!!!</title>
         </head>
     <body>
