--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,20 @@
     <head>
 
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 
-        <script src="/js/jquery-3.1.0.min.js"></script>
+    <script src="/js/jquery-3.1.0.min.js"></script>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="/js/bootstrap.min.js" ></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="/js/bootstrap.min.js" ></script>
 
-        <script src="/js/canvasjs.min.js"
-        <title>Air Adventure!!!</title>
-        </head>
+    <script src="/js/canvasjs.min.js"></script>
+    <title>Air Adventure!!!</title>
+    </head>
     <body>
 
     </body>
