--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="/js/bootstrap.min.js" ></script>
 
-    <script src="/js/canvasjs.min.js"></script>
+        <script src="/js/canvasjs.min.js"></script>
     <title>Air Adventure!!!</title>
     </head>
     <body>
-
+        <script src="/js/main.js"></script>
     </body>
 </html>
