--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="row">
-  <div class="col-md-4">.col-md-1</div>
+  <div class="col-md-4">LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE </div>
   <div class="col-md-8">.col-md-1</div>
         <script src="/js/main.js"></script>
     </body>
