--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     </head>
     <body>
         <div class="row">
-  <div class="col-md-4">LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE LONG TEXT EXAMPLE </div>
+<!--Add chart to div below-->
+  <div class="col-md-4"> </div>
   <div class="col-md-8">.col-md-1</div>
         <script src="/js/main.js"></script>
     </body>
