--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
     <body>
         <div class="row">
 <!--Add chart to div below-->
-  <div class="col-md-4"> </div>
+  <div class="col-md-4">
+  	<div id="myChart" style="height: 300px; width: 100%;"></div>
+  </div>
   <div class="col-md-8">.col-md-1</div>
         <script src="/js/main.js"></script>
     </body>
