Removed text from percenatge paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <!--Add chart to div below-->
   <div class="col-md-5">
   	<div id="myChart" style="height: 300px; width: 90%;"></div>
-      <p id="percentage">Note: This only represents 10% of the air.</p>
+      <p id="percentage"></p>
   </div>
   <div class="col-md-7">.col-md-1</div>
         <script src="/js/main.js"></script>
