--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,13 @@
   	<div id="myChart" style="height: 300px; width: 90%;"></div>
       <p id="percentage"></p>
   </div>
-  <div class="col-md-7">.col-md-1</div>
+  <div class="col-md-7">
+            <div id="map"></div>
+            </div>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC47l_pcnJzgpV3wmW3cv4lVfOEXQzJt3Q&callback=initMap">
+        </script>
         <script src="/js/main.js"></script>
+
     </body>
 </html>
