--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="/css/style.css"
     <link rel="icon" href="/favicon.ico?v=2"/>
 
     <script src="/js/jquery-3.1.0.min.js"></script>
