Should now show pins

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <div class="col-md-7">
             <div id="map"></div>
             </div>
-        <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC47l_pcnJzgpV3wmW3cv4lVfOEXQzJt3Q&callback=initMap">
+        <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC47l_pcnJzgpV3wmW3cv4lVfOEXQzJt3Q">
         </script>
         <script src="/js/main.js"></script>
 
