--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
   <div class="col-md-7">
             <div id="map"></div>
             </div>
+        </div>
+        <div class="row">
+        <div class="col-md-2"><img width="100%" src="/icon.png"></div>
+        <div class="col-md-10"></div>
+        </div>
         <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC47l_pcnJzgpV3wmW3cv4lVfOEXQzJt3Q">
         </script>
