--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   	<div id="myChart" style="height: 300px; width: 90%;"></div>
       <p id="percentage"></p>
       <p>This project was created by Team Futuristic Blanket for GovHack 2016</p>
-      <p>Libraries Used: Bootstrap, Jquery, Express and CanvasJS</p>
+      <p>Libraries Used: Bootstrap, Jquery, Express, NODE.JS Hackathon Starter and CanvasJS</p>
       <p>This app uses the google map api</p>
       <p>Special thanks to Sam and Jason for the help with google maps</p>
       <p>Thanks to Paul for the help with MS Azure</p>
