Added exclamtion marks

--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,13 @@
   <div class="col-md-5">
   	<div id="myChart" style="height: 300px; width: 90%;"></div>
       <p id="percentage"></p>
-      <p>This project was created by Team Futuristic Blanket for GovHack 2016</p>
-      <p>Libraries Used: Bootstrap, Jquery, Express, NODE.JS Hackathon Starter and CanvasJS</p>
-      <p>This app uses the google map api</p>
-      <p>Special thanks to Sam and Jason for the help with google maps</p>
-      <p>Thanks to Paul for the help with MS Azure</p>
-      <p>Thanks to Azure for the free hosting</p>
-      <P>And of course... Very Special thanks to Digital Careers for the food, best part of the weekend!</P>
+      <p>This project was created by Team Futuristic Blanket for GovHack 2016.</p>
+      <p>Libraries Used: Bootstrap, Jquery, Express, NODE.JS Hackathon Starter and CanvasJS.</p>
+      <p>This app uses the Google Map Api.</p>
+      <p>Special thanks to Sam and Jason for the help with Google Maps!</p>
+      <p>Thanks to Paul for the help with MS Azure!</p>
+      <p>Thanks to Azure for the free hosting!</p>
+      <P>And of course... Very Special thanks to Digital Careers for the food, best part of the weekend!!!</P>
   </div>
   <div class="col-md-6">
             <div id="map"></div>
